--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h2 class="details__title">Fall Limited Edition Sneakers</h2>
       <p class="details__description">These low-profile sneakers are your perfect casual wear companion. Featuring a 
         durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-      <div class="datails__prices">
+      <div class="details__prices">
         <p class="details__now">$125.00 <span class="details__discount">50%</span></p>
         <p class="details__before">$125.00</p>
       </div>
