--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="details__product-quantity">
         <div class="input">
           <img class="input__minus" src="./images/icon-minus.svg" alt="menus icon">
-          <input class="input__number" type="number" value="0">
+          <input class="input__number" type="text" value="0">
           <img class="input__plus" src="./images/icon-plus.svg" alt="menus icon">
         </div>
         <button class="details__button"><img src="./images/icon-cart.svg">Add to cart</button>
