estilos cart-modal(mobile)

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
       <p class="cart-modal__title">Cart</p>
       <div class="cart-modal__checkout-container">
         <div class="cart-modal__details-container">
-          <img src="./images/image-product-1-thumbnail.jpg">
+          <img class="cart-modal__image" src="./images/image-product-1-thumbnail.jpg">
           <div>
             <p class="cart-modal__product">Autum Limited Edition...</p>
             <p class="cart-modal__price">$125 x3 <span>$375.00</span></p>
           </div>
           <img class="cart-modal__delete" src="./images/icon-delete.svg" alt="delete">
         </div>
-        <button class="cart-modal__delete">Checkout</button>
+        <button class="cart-modal__checkout-btn">Checkout</button>
       </div>
     </div>
     <!-- fin cart modal -->
