estilos gallery y details (desktop)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </header>
 
     
-    <div class="content">
+    <section class="content">
       <article class="gallery">
         <div class="gallery__image-container">
           <img class="gallery__prev" src="./images/icon-previous.svg" alt="previous button">
@@ -73,9 +73,8 @@
           <img class="gallery__thumbnail" id="4" src="./images/image-product-4-thumbnail.jpg" alt="thumbnail">
         </div>
       </article>
-    </div>
 
-    <article class="details">
+      <article class="details">
       <h2 class="details__company">Sneaker Company</h2>
       <h2 class="details__title">Fall Limited Edition Sneakers</h2>
       <p class="details__description">These low-profile sneakers are your perfect casual wear companion. Featuring a 
@@ -93,6 +92,9 @@
         <button class="details__button"><img src="./images/icon-cart.svg">Add to cart</button>
       </div>
     </article>
+    </section>
+
+    
 
     <!-- inicio cart modal -->
     <div class="cart-modal">
