ahora el carrito esta visible

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="details__product-quantity">
         <div class="input">
           <img class="input__minus" src="./images/icon-minus.svg" alt="menus icon">
-          <input class="input__number" type="text" value="0">
+          <input class="input__number" type="text" value="0" readonly>
           <img class="input__plus" src="./images/icon-plus.svg" alt="menus icon">
         </div>
         <button class="details__button"><img src="./images/icon-cart.svg">Add to cart</button>
@@ -140,5 +140,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Román Alvarez</a>.
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
