--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
        
       <div class="header__cart-avatar">
         <div class="header__cart">
-          <div class="header__cart--notification">3</div>
-          <img src="./images/icon-cart.svg" alt="icon cart">
+          <div class="header__cart--notification">0</div>
+          <img src="./images/icon-cart-black.svg" alt="icon cart">
         </div>
 
         <img class="header__avatar" src="./images/image-avatar.png" alt="">
@@ -67,10 +67,10 @@
           <img class="gallery__next" src="./images/icon-next.svg" alt="next button">
         </div>
         <div class="gallery__thumbnails">
-          <img class="gallery__thumbnail" id="1" src="./images/image-product-1-thumbnail.jpg" alt="thumbnail">
-          <img class="gallery__thumbnail" id="2" src="./images/image-product-2-thumbnail.jpg" alt="thumbnail">
-          <img class="gallery__thumbnail" id="3" src="./images/image-product-3-thumbnail.jpg" alt="thumbnail">
-          <img class="gallery__thumbnail" id="4" src="./images/image-product-4-thumbnail.jpg" alt="thumbnail">
+          <img class="gallery__thumbnail" id="t1" src="./images/image-product-1-thumbnail.jpg" alt="thumbnail">
+          <img class="gallery__thumbnail" id="t2" src="./images/image-product-2-thumbnail.jpg" alt="thumbnail">
+          <img class="gallery__thumbnail" id="t3" src="./images/image-product-3-thumbnail.jpg" alt="thumbnail">
+          <img class="gallery__thumbnail" id="t4" src="./images/image-product-4-thumbnail.jpg" alt="thumbnail">
         </div>
       </article>
 
@@ -100,7 +100,7 @@
     <div class="cart-modal">
       <p class="cart-modal__title">Cart</p>
       <div class="cart-modal__checkout-container">
-        <div class="cart-modal__details-container">
+        <!-- <div class="cart-modal__details-container">
           <img class="cart-modal__image" src="./images/image-product-1-thumbnail.jpg">
           <div>
             <p class="cart-modal__product">Autum Limited Edition...</p>
@@ -108,13 +108,20 @@
           </div>
           <img class="cart-modal__delete" src="./images/icon-delete.svg" alt="delete">
         </div>
-        <button class="cart-modal__checkout-btn">Checkout</button>
+        <button class="cart-modal__checkout-btn">Checkout</button> -->
       </div>
     </div>
     <!-- fin cart modal -->
 
-    <!-- inicio gallery modal -->
-    <div class="modal-gallery__background">
+  </main> 
+  
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Román Alvarez</a>.
+  </footer>
+
+  <!-- inicio gallery modal -->
+   <div class="modal-gallery__background">
       <article class="modal-gallery">
         <div class="modal-gallery__close-container">
           <img class="modal-gallery__close" src="./images/icon-close.svg" alt="icon close">
@@ -131,15 +138,8 @@
         </div>
       </article>
     </div>
-    <!-- fin gallery modal -->
+  <!-- fin gallery modal -->
 
-  </main> 
-
-  
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Román Alvarez</a>.
-  </footer>
   <script src="main.js"></script>
 </body>
 </html>
